# climplot

./: .gitignore  CLAUDE.md  README.md  demo_atmosphere.py  demo_native_grid.py  pyproject.toml
.github/workflows/: publish.yml
docs/: plotting-guide.md
docs/source/: api.rst  conf.py  index.rst  metrics.rst  quickstart.rst  style-guide.rst
examples/: generate_guide_figures.py
src/climplot/: __init__.py  colormaps.py  maps.py  metrics.py  panels.py  style.py  timeseries.py
src/climplot/data/: presentation.mplstyle  publication.mplstyle
tests/: __init__.py  test_colormaps.py  test_maps.py  test_metrics.py  test_panels.py  test_style.py
